2010-04-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘struct maketimestuff’ definition global.

	* maketime.h (maketimestuff): Move struct def to here...
	* maketime.c: Don't #include "b-divvy.h".
	(maketimestuff): ...from here.
	(init_maketimestuff): Delete func.
	* rcsutil.c (gnurcs_init): Init ‘BE (maketimestuff)’ directly.

2010-04-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Allocate edit state lazily.

	Here, "F" means "Take ‘struct editstuff *’ as first arg".
	* rcsedit.c (EDIT): Update macro.
	(make_editstuff): New func.
	(insertline, deletelines, snapshotedit_fast, finishedit_fast)
	(swapeditfiles, finishedit_slow, snapshotedit_slow, finishedit)
	(snapshotedit, copylines): F.
	(ensure_editstuff): Delete func.
	(copystring): F; don't call ‘ensure_editstuff’.
	(enterstring): Likewise.
	(editstring): F.
	(rcswriteopen): Don't call ‘ensure_editstuff’.
	* rcsgen.c (scandeltatext): F.
	(buildrevision): Create a ‘struct editstuff’ to pass around.
	* rcs.c (scanlogtext, buildeltatext): F.
	(main): Create a ‘struct editstuff’ to pass around.
	* base.h (struct behavior): Remove member ‘editstuff’.
	(make_editstuff): New func decl.
	(copystring, enterstring, finishedit)
	(snapshotedit, editstring): Update func decls.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move ‘testalloc’, ‘testrealloc’; make them static.

	* rcsedit.c: #include <stdlib.h>.
	(okalloc, testalloc, testrealloc): New static funcs.
	* rcsutil.c (okalloc, testalloc, testrealloc): Delete funcs.
	* base.h (testalloc, testrealloc): Delete func decls.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘SHARED’ more.

	* ci.c (addassoclst): Use ‘ZLLOC’.
	* rcs.c (getassoclst, getchaccess)
	(getmessage, getstates, main): Likewise.
	(rmnewlocklst): Don't ‘tfree’.
	* rlog.c (getlocker, getauthor, getstate)
	(getdatepair, getrevpairs): Use ‘ZLLOC’.
	* base.h (talloc, tfree): Delete macros.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>
